[gd_scene load_steps=31 format=3 uid="uid://bte1j3ynvf0re"]

[ext_resource type="Script" path="res://scripts/character_script.gd" id="1_vew7i"]
[ext_resource type="FontFile" uid="uid://bued63pcmgjnq" path="res://assets/Poppins-SemiBold.ttf" id="2_mr3gc"]
[ext_resource type="Script" path="res://scripts/ability_ui.gd" id="2_njcvc"]
[ext_resource type="FontFile" uid="uid://b1fkbwbmmjphq" path="res://assets/Poppins-Light.ttf" id="3_ypbdt"]
[ext_resource type="Texture2D" uid="uid://caeq7yqhddwx4" path="res://assets/black_ring.png" id="5_28w1q"]
[ext_resource type="Texture2D" uid="uid://cmoisupixk4og" path="res://assets/light_lilac_ring.png" id="6_dkhol"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_35hl4"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_8q6nx"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_bjyfv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pce3x"]
bg_color = Color(0.0431373, 0, 0.129412, 0.431373)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g10d4"]
bg_color = Color(0.0431373, 0, 0.129412, 0.862745)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvqix"]
bg_color = Color(0.921569, 0.905882, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_2ab3d"]
line_spacing = 0.0
font = ExtResource("2_mr3gc")
font_size = 32
font_color = Color(0.0431373, 0, 0.129412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qaaxn"]
line_spacing = 0.1
font = ExtResource("3_ypbdt")
font_size = 28
font_color = Color(0.921569, 0.905882, 1, 1)
outline_color = Color(0.921569, 0.905882, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5xld"]
bg_color = Color(0.0431373, 0, 0.129412, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ims4y"]
bg_color = Color(0.921569, 0.905882, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cgdpr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jh6gu"]
bg_color = Color(0.921569, 0.905882, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0431373, 0, 0.129412, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_8dsje"]
line_spacing = 0.0
font = ExtResource("2_mr3gc")
font_size = 32
font_color = Color(0.0431373, 0, 0.129412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aylmd"]
line_spacing = 0.1
font = ExtResource("3_ypbdt")
font_size = 28
font_color = Color(0.921569, 0.905882, 1, 1)
outline_size = 6
outline_color = Color(0.0431373, 0, 0.129412, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0281"]

[sub_resource type="LabelSettings" id="LabelSettings_pvmeo"]
line_spacing = 0.0
font = ExtResource("2_mr3gc")
font_size = 48
font_color = Color(0.921569, 0.905882, 1, 1)
outline_size = 6
outline_color = Color(0.0431373, 0, 0.129412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ie452"]
line_spacing = 0.0
font = ExtResource("2_mr3gc")
font_size = 32
font_color = Color(0.921569, 0.905882, 1, 1)
outline_size = 6
outline_color = Color(0.0431373, 0, 0.129412, 1)

[sub_resource type="Animation" id="Animation_6d3a8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:SPEED")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:ability_on_cooldown")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_jump")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kbgcf"]
resource_name = "runner_ability_timer"
length = 25.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:SPEED")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 5.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:ability_on_cooldown")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_jump")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterUI")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"change_ability_bar_color_to_active"
}, {
"args": [0.15, 0.0],
"method": &"tween_ability_bar"
}, {
"args": [22.0, 1.0],
"method": &"tween_ability_bar"
}]
}

[sub_resource type="Animation" id="Animation_yu82u"]
resource_name = "trapper_ability_timer"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:ability_on_cooldown")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_trap"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterUI")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.2, 0.0],
"method": &"tween_ability_bar"
}, {
"args": [21.8, 1.0],
"method": &"tween_ability_bar"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsdr0"]
_data = {
"RESET": SubResource("Animation_6d3a8"),
"runner_ability_timer": SubResource("Animation_kbgcf"),
"trapper_ability_timer": SubResource("Animation_yu82u")
}

[sub_resource type="Animation" id="Animation_oq4mg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:can_jump")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:can_move")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_05887"]
resource_name = "trapped"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:can_jump")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:can_move")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterUI")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["trapped", 2.0],
"method": &"set_status_effect"
}, {
"args": [],
"method": &"undisplay_status_effect"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4t4f"]
_data = {
"RESET": SubResource("Animation_oq4mg"),
"trapped": SubResource("Animation_05887")
}

[node name="Character" type="CharacterBody3D"]
collision_layer = 3
collision_mask = 5
script = ExtResource("1_vew7i")
chosen_ability = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_35hl4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_8q6nx")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)

[node name="FpsCamera" type="Camera3D" parent="Head"]

[node name="SpringArm3D" type="SpringArm3D" parent="."]
shape = SubResource("SeparationRayShape3D_bjyfv")
spring_length = 3.0
margin = 0.5

[node name="TpsCamera" type="Camera3D" parent="SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.59391, 4.81613)
current = true

[node name="CharacterUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
script = ExtResource("2_njcvc")

[node name="AbilityPanel" type="Panel" parent="CharacterUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.909
anchor_right = 0.5
anchor_bottom = 0.909
offset_left = -183.0
offset_top = -40.032
offset_right = 183.0
offset_bottom = -0.0319824
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pce3x")

[node name="Bar" type="Panel" parent="CharacterUI/AbilityPanel"]
self_modulate = Color(0.474122, 0.0131389, 0.414, 0.862745)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g10d4")

[node name="GodotIsStupidIHateIt" type="Control" parent="CharacterUI/AbilityPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="LetterBackgroundPanel" type="Panel" parent="CharacterUI/AbilityPanel/GodotIsStupidIHateIt"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uvqix")

[node name="AbilityLetter" type="Label" parent="CharacterUI/AbilityPanel/GodotIsStupidIHateIt/LetterBackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Q"
label_settings = SubResource("LabelSettings_2ab3d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityText" type="Label" parent="CharacterUI/AbilityPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -20.0
offset_right = 57.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Ability"
label_settings = SubResource("LabelSettings_qaaxn")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ProgressBar" type="Panel" parent="CharacterUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.983
anchor_right = 0.6
anchor_bottom = 0.983
offset_left = -147.0
offset_top = -38.984
offset_right = 146.6
offset_bottom = 0.0159912
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_n5xld")

[node name="Panel" type="Panel" parent="CharacterUI/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ims4y")

[node name="Border" type="Control" parent="CharacterUI/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect29" type="ColorRect" parent="CharacterUI/ProgressBar/Border"]
layout_mode = 0
offset_right = 4.0
offset_bottom = 39.0
color = Color(0.0431373, 0, 0.129412, 0.509804)

[node name="ColorRect30" type="ColorRect" parent="CharacterUI/ProgressBar/Border"]
layout_mode = 0
offset_left = 520.2
offset_right = 524.2
offset_bottom = 39.0
color = Color(0.0431373, 0, 0.129412, 0.509804)

[node name="ColorRect31" type="ColorRect" parent="CharacterUI/ProgressBar/Border"]
layout_mode = 0
offset_left = 4.0
offset_right = 520.0
offset_bottom = 4.0
color = Color(0.0431373, 0, 0.129412, 0.509804)

[node name="ColorRect32" type="ColorRect" parent="CharacterUI/ProgressBar/Border"]
layout_mode = 0
offset_left = 4.0
offset_top = 35.0
offset_right = 520.0
offset_bottom = 39.0
color = Color(0.0431373, 0, 0.129412, 0.509804)

[node name="InteractPanel" type="PanelContainer" parent="CharacterUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.983
anchor_right = 0.5
anchor_bottom = 0.983
offset_left = -147.0
offset_top = -38.0
offset_right = 147.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_cgdpr")

[node name="GodotIsStupidIHateIt" type="Control" parent="CharacterUI/InteractPanel"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="LetterBackgroundPanel" type="Panel" parent="CharacterUI/InteractPanel/GodotIsStupidIHateIt"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -17.0
offset_right = 34.0
offset_bottom = 17.0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jh6gu")

[node name="AbilityLetter" type="Label" parent="CharacterUI/InteractPanel/GodotIsStupidIHateIt/LetterBackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "E"
label_settings = SubResource("LabelSettings_8dsje")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityText" type="Label" parent="CharacterUI/InteractPanel"]
layout_mode = 2
text = "Interact"
label_settings = SubResource("LabelSettings_aylmd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillCheck" type="Control" parent="CharacterUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BlackRing1" type="Sprite2D" parent="CharacterUI/SkillCheck"]
position = Vector2(577, 475)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_28w1q")
offset = Vector2(-180, 180)

[node name="BlackRing2" type="Sprite2D" parent="CharacterUI/SkillCheck"]
position = Vector2(577, 475)
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_28w1q")
offset = Vector2(-180, 180)

[node name="BlackRing3" type="Sprite2D" parent="CharacterUI/SkillCheck"]
position = Vector2(577, 475)
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_28w1q")
offset = Vector2(-180, 180)

[node name="BlackRing4" type="Sprite2D" parent="CharacterUI/SkillCheck"]
position = Vector2(577, 475)
rotation = -1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_28w1q")
offset = Vector2(-180, 180)

[node name="SkillcheckRing" type="Sprite2D" parent="CharacterUI/SkillCheck"]
position = Vector2(577, 475)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_dkhol")
offset = Vector2(-178.948, 178.947)

[node name="Needle" type="ColorRect" parent="CharacterUI/SkillCheck"]
layout_mode = 0
offset_left = 574.0
offset_top = 411.0
offset_right = 580.0
offset_bottom = 431.0
pivot_offset = Vector2(3, 64)
color = Color(1, 0, 0, 1)

[node name="StatusEffect" type="PanelContainer" parent="CharacterUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_t0281")

[node name="VBox" type="VBoxContainer" parent="CharacterUI/StatusEffect"]
layout_mode = 2

[node name="EffectLabel" type="Label" parent="CharacterUI/StatusEffect/VBox"]
layout_mode = 2
text = "STATUS EFFECT UWU"
label_settings = SubResource("LabelSettings_pvmeo")
horizontal_alignment = 1

[node name="DurationLabel" type="Label" parent="CharacterUI/StatusEffect/VBox"]
layout_mode = 2
text = "2.0"
label_settings = SubResource("LabelSettings_ie452")
horizontal_alignment = 1

[node name="BeastAbilityAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bsdr0")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h4t4f")
}
